// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Label id prop becomes htmlFor 1`] = `
<div
  className="input-container"
>
  <label
    htmlFor="htmlFor"
  >
    Input
  </label>
  <input
    className={undefined}
    id="htmlFor"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Container Label label prop acts as Label component's child 1`] = `
<div
  className="input-container"
>
  <label
    htmlFor={undefined}
  >
    Input
  </label>
  <input
    className={undefined}
    id={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Container Label labelProps populate label tag 1`] = `
<div
  className="input-container"
>
  <label
    className="classy react"
    htmlFor={undefined}
    id="label-test"
  >
    Input
  </label>
  <input
    className={undefined}
    id={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Container Underline accepts underlineProps 1`] = `
<div
  className="input-container"
>
  <input
    className={undefined}
    id={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <p
    className="underline new-class test"
    id="underline"
  >
    More info about input
  </p>
</div>
`;

exports[`Container Underline renders when passed as prop 1`] = `
<div
  className="input-container"
>
  <input
    className={undefined}
    id={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
  <p
    className="underline"
  >
    More info about input
  </p>
</div>
`;

exports[`Container props populate the input tag 1`] = `
<div
  className="input-container"
>
  <input
    className="test-class another class"
    id="test-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="email"
    value="Can set a default value"
  />
</div>
`;

exports[`Container renders with default props 1`] = `
<div
  className="input-container"
>
  <input
    className={undefined}
    id={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</div>
`;

exports[`Container renders with props from containerProps object 1`] = `
<div
  className="input-container classy react"
  id="container"
  style={
    Object {
      "margin": "10px",
    }
  }
>
  <input
    className={undefined}
    id={undefined}
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="text"
    value=""
  />
</div>
`;
